Archive2/dd/1a9a486c043959/output
main.cpp:9:8: error: no type named 'declare_reachable' in namespace 'std'
  std::declare_reachable(p);
  ~~~~~^
main.cpp:15:12: error: no member named 'undeclare_reachable' in namespace 'std'
  p = std::undeclare_reachable((int*)((std::uintptr_t)p ^ UINTPTR_MAX));
      ~~~~~^
2 errors generated.
